fix: made resume button with more contrast

--- a/src/HomePageSections/AboutMe.module.css
+++ b/src/HomePageSections/AboutMe.module.css
@@ -124,9 +124,11 @@
     letter-spacing: 1.0px;
 
     background-color: rgba(0, 0, 0, 0.589);
-    backdrop-filter: blur(15px);
+    /* backdrop-filter: blur(15px); */
     border: none;
     border-radius: 5px;
+
+    background-color: rgb(0, 134, 11);
 }
 
 /* .progressHeaders {
@@ -166,7 +168,7 @@
 } */
 
 .aboutMeExtended {
-    margin-top: 1%;
+    margin-top: 3%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
